--- a/swoosh/swoosh/Base.lproj/Main.storyboard
+++ b/swoosh/swoosh/Base.lproj/Main.storyboard
@@ -40,6 +40,9 @@
                                 <state key="normal" title="GET STARTED">
                                     <color key="titleColor" red="0.99603289365768433" green="0.99618560075759888" blue="0.99165958166122437" alpha="0.8265845070422535" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="0Ir-6r-Dct" kind="show" id="KB2-GK-SYf"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ON GOING ALL OUT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K4f-wd-rLZ">
                                 <rect key="frame" x="18.5" y="211.5" width="283" height="36"/>
@@ -171,11 +174,26 @@
                                 <state key="normal" title="Next">
                                     <color key="titleColor" red="0.99603289370000003" green="0.99618560079999996" blue="0.99165958170000001" alpha="0.82658450699999997" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="La7-1C-pqi" kind="show" id="MOy-p0-Qf1"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZMm-rH-FYb">
+                                <rect key="frame" x="16" y="30" width="25" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="nsC-Lo-Urj"/>
+                                    <constraint firstAttribute="width" constant="25" id="sax-Ov-UNo"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="WVM-Yj-4v8" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="6yM-ea-GHA"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="L4y-c4-qPV" firstAttribute="leading" secondItem="1Su-E5-ay4" secondAttribute="leading" id="1QX-kT-MCu"/>
+                            <constraint firstItem="ZMm-rH-FYb" firstAttribute="top" secondItem="1Su-E5-ay4" secondAttribute="top" constant="10" id="7kw-ax-z2G"/>
                             <constraint firstItem="XXY-qR-bPQ" firstAttribute="top" secondItem="W1g-uv-iEc" secondAttribute="bottom" constant="110" id="EJH-w0-XSB"/>
                             <constraint firstItem="PTk-3n-JxM" firstAttribute="leading" secondItem="1Su-E5-ay4" secondAttribute="leading" constant="16" id="KfB-If-a4M"/>
                             <constraint firstItem="1Su-E5-ay4" firstAttribute="trailing" secondItem="PTk-3n-JxM" secondAttribute="trailing" constant="16" id="LNw-ZX-31O"/>
@@ -186,14 +204,16 @@
                             <constraint firstItem="L4y-c4-qPV" firstAttribute="trailing" secondItem="1Su-E5-ay4" secondAttribute="trailing" id="jku-sm-em4"/>
                             <constraint firstItem="1Su-E5-ay4" firstAttribute="bottom" secondItem="PTk-3n-JxM" secondAttribute="bottom" constant="20" id="n95-w6-WaN"/>
                             <constraint firstItem="XXY-qR-bPQ" firstAttribute="leading" secondItem="1Su-E5-ay4" secondAttribute="leading" constant="16" id="qJm-5J-Mj3"/>
+                            <constraint firstItem="ZMm-rH-FYb" firstAttribute="leading" secondItem="1Su-E5-ay4" secondAttribute="leading" constant="16" id="xGp-pE-y0E"/>
                             <constraint firstItem="W1g-uv-iEc" firstAttribute="top" secondItem="1Su-E5-ay4" secondAttribute="top" constant="20" id="xcp-Ea-VOj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="1Su-E5-ay4"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a9n-iu-tSj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="WVM-Yj-4v8" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="869.60000000000002" y="116.49175412293854"/>
+            <point key="canvasLocation" x="868.125" y="116.19718309859155"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="isi-4a-CiB">
@@ -206,6 +226,18 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="beginnerBallerBG" translatesAutoresizingMaskIntoConstraints="NO" id="mq6-Y7-1A0">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V5N-Ip-PUH" customClass="BorderButton" customModule="swoosh" customModuleProvider="target">
+                                <rect key="frame" x="16" y="498" width="288" height="50"/>
+                                <color key="backgroundColor" red="0.028383832420000001" green="0.03940539807" blue="0.01352693699" alpha="0.51584507040000005" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="contentStretch" x="0.25" y="0.34999999999999998" width="1" height="1"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="kwh-IO-8Uc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
+                                <state key="normal" title="Finish">
+                                    <color key="titleColor" red="0.99603289370000003" green="0.99618560079999996" blue="0.99165958170000001" alpha="0.82658450699999997" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="39" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dmZ-Cv-ahW">
                                 <rect key="frame" x="101" y="40" width="119" height="65"/>
                                 <subviews>
@@ -249,21 +281,21 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V5N-Ip-PUH" customClass="BorderButton" customModule="swoosh" customModuleProvider="target">
-                                <rect key="frame" x="16" y="498" width="288" height="50"/>
-                                <color key="backgroundColor" red="0.028383832420000001" green="0.03940539807" blue="0.01352693699" alpha="0.51584507040000005" colorSpace="custom" customColorSpace="sRGB"/>
-                                <rect key="contentStretch" x="0.25" y="0.34999999999999998" width="1" height="1"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nmc-t9-zVG">
+                                <rect key="frame" x="16" y="30" width="25" height="16"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="kwh-IO-8Uc"/>
+                                    <constraint firstAttribute="width" constant="25" id="AZr-ba-df2"/>
+                                    <constraint firstAttribute="height" constant="16" id="Ec1-Pb-cau"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
-                                <state key="normal" title="Finish">
-                                    <color key="titleColor" red="0.99603289370000003" green="0.99618560079999996" blue="0.99165958170000001" alpha="0.82658450699999997" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="wJ1-di-edf" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="cfh-U8-u2h"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Nmc-t9-zVG" firstAttribute="top" secondItem="OXH-Iy-LSJ" secondAttribute="top" constant="10" id="7de-dZ-u8e"/>
                             <constraint firstItem="mq6-Y7-1A0" firstAttribute="top" secondItem="9wz-bO-gmY" secondAttribute="top" id="7nU-sB-S5q"/>
                             <constraint firstItem="RE3-oB-Zbm" firstAttribute="top" secondItem="dmZ-Cv-ahW" secondAttribute="bottom" constant="50" id="AwV-qd-JAg"/>
                             <constraint firstItem="OXH-Iy-LSJ" firstAttribute="trailing" secondItem="mq6-Y7-1A0" secondAttribute="trailing" id="Fwh-Ho-OXD"/>
@@ -274,6 +306,7 @@
                             <constraint firstItem="OXH-Iy-LSJ" firstAttribute="trailing" secondItem="V5N-Ip-PUH" secondAttribute="trailing" constant="16" id="eth-wZ-2O0"/>
                             <constraint firstItem="dmZ-Cv-ahW" firstAttribute="centerX" secondItem="9wz-bO-gmY" secondAttribute="centerX" id="hJ6-A9-eLT"/>
                             <constraint firstItem="mq6-Y7-1A0" firstAttribute="leading" secondItem="OXH-Iy-LSJ" secondAttribute="leading" id="qaE-vq-Mvj"/>
+                            <constraint firstItem="Nmc-t9-zVG" firstAttribute="leading" secondItem="OXH-Iy-LSJ" secondAttribute="leading" constant="16" id="tSd-81-kCv"/>
                             <constraint firstItem="dmZ-Cv-ahW" firstAttribute="top" secondItem="OXH-Iy-LSJ" secondAttribute="top" constant="20" id="yfq-FC-Kcw"/>
                             <constraint firstItem="OXH-Iy-LSJ" firstAttribute="bottom" secondItem="V5N-Ip-PUH" secondAttribute="bottom" constant="20" id="zps-Hx-0MS"/>
                         </constraints>
@@ -281,11 +314,13 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sbB-Kt-SrW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="wJ1-di-edf" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1632.8" y="115.59220389805098"/>
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
