--- a/swoosh/swoosh/Base.lproj/Main.storyboard
+++ b/swoosh/swoosh/Base.lproj/Main.storyboard
@@ -15,10 +15,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Welcome View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="swoosh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeViewController" customModule="swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -97,10 +97,10 @@
             </objects>
             <point key="canvasLocation" x="113.79310344827587" y="114.40000000000001"/>
         </scene>
-        <!--View Controller-->
+        <!--League View Controller-->
         <scene sceneID="G0h-yH-mi5">
             <objects>
-                <viewController id="0Ir-6r-Dct" sceneMemberID="viewController">
+                <viewController id="0Ir-6r-Dct" customClass="LeagueViewController" customModule="swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Aiw-vs-6yO">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -213,12 +213,12 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a9n-iu-tSj" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="WVM-Yj-4v8" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="868.125" y="116.19718309859155"/>
+            <point key="canvasLocation" x="864" y="112"/>
         </scene>
-        <!--View Controller-->
+        <!--Skill View Controller-->
         <scene sceneID="isi-4a-CiB">
             <objects>
-                <viewController id="La7-1C-pqi" sceneMemberID="viewController">
+                <viewController id="La7-1C-pqi" customClass="SkillViewController" customModule="swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9wz-bO-gmY">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -316,7 +316,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sbB-Kt-SrW" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="wJ1-di-edf" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1632.8" y="115.59220389805098"/>
+            <point key="canvasLocation" x="1614" y="113"/>
         </scene>
     </scenes>
     <resources>
